force-app/main/default/objects/HRMutation__c/HRMutation__c.object-meta.xml
<CustomObject>
    <label>HR Mutation</label>
    <nameField>
        <displayFormat>HR-{000000}</displayFormat>
        <label>HR Mutation Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Mutation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>