force-app/main/default/objects/HRMutation__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>HR Mutation</relationshipLabel>
    <relationshipName>HRMutation</relationshipName>
    <type>Lookup</type>
</CustomField>