force-app/main/default/objects/HRMutation__c/fields/EmployeeCosts__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCosts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Costs</label>
    <referenceTo>EmployeeCosts__c</referenceTo>
    <relationshipLabel>HR Mutation</relationshipLabel>
    <relationshipName>HRMutation</relationshipName>
    <type>Lookup</type>
</CustomField>