force-app/main/default/objects/HRMutation__c/fields/InternalAccount__c.field-meta.xml
<CustomField>
    <fullName>InternalAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HR Mutation</relationshipLabel>
    <relationshipName>HRMutation</relationshipName>
    <type>Lookup</type>
</CustomField>