force-app/main/default/objects/HRMutation__c/fields/MutationDate__c.field-meta.xml
<CustomField>
    <fullName>MutationDate__c</fullName>
    <label>Mutation (Date)</label>
    <type>Date</type>
</CustomField>