force-app/main/default/objects/HRMutation__c/fields/TimetrackerWorkloadPercent__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerWorkloadPercent__c</fullName>
    <label>Timetracker - Workload %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>