force-app/main/default/objects/HRMutation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>EmployeeCosts__c</columns>
    <columns>InternalAccount__c</columns>
    <columns>MutationDate__c</columns>
    <columns>TimetrackerWorkloadPercent__c</columns>
    <columns>CostCenter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>de</language>
    <sharedTo>
        <group>Skywalk_HR_Alle</group>
    </sharedTo>
</ListView>